# WebDataExtractor

./: .dockerignore  .gitignore  Dockerfile  README.md  TECH_SPEC.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  feature.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  routes.py
app/db/: __init__.py  session.py
app/models/: __init__.py  database.py  schemas.py
app/services/: __init__.py  core.py
tests/: __init__.py  test___init__.py  test_api.py  test_config.py  test_core.py  test_database.py  test_main.py  test_routes.py  test_schemas.py  test_session.py
