[tool.poetry]
name = "WebDataExtractor"
version = "0.1.0"
description = "Extracts and organizes data from websites into structured formats for AI analysis and automation."
authors = ["Awais Khan <awais.khan@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.0"
httpx = "^0.23.0"
aiosqlite = "^0.17.0"
rich = "^12.5.1"
typer = "^0.4.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"